gen/GrammarParser.java
// Generated from C:/Users/sisin/IdeaProjects/PJP/projekt_PJP/pjp_BIJ0013/src/main/java\Grammar.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, DATOVY_TYP=14, STREDNIK=15, MINUS=16, 
		MODULO=17, SPOJENI_RETEZCU=18, RELACNI_OPERATORY_POROVNANI=19, LOGICKEANDOR=20, 
		LOGICKENOT=21, PRIRAZENI=22, FLOAT=23, INT=24, BOOLEAN=25, VARIABLE=26, 
		STRINGSPECIAL=27, STRINGFIRSTPART=28, STRING=29, COMMENT=30, WS=31;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_firstRule = 2, RULE_condition = 3, 
		RULE_promenne = 4, RULE_datovyTyp = 5, RULE_expression = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "firstRule", "condition", "promenne", "datovyTyp", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'read'", "','", "'write'", "'if'", "'('", "')'", "'{'", "'}'", 
			"'else'", "'while'", "'+'", "'*'", "'/'", null, "';'", "'-'", "'%'", 
			"'.'", null, null, "'!'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "DATOVY_TYP", "STREDNIK", "MINUS", "MODULO", "SPOJENI_RETEZCU", 
			"RELACNI_OPERATORY_POROVNANI", "LOGICKEANDOR", "LOGICKENOT", "PRIRAZENI", 
			"FLOAT", "INT", "BOOLEAN", "VARIABLE", "STRINGSPECIAL", "STRINGFIRSTPART", 
			"STRING", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(14);
				stat();
				}
				}
				setState(17); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__9) | (1L << DATOVY_TYP) | (1L << LOGICKENOT) | (1L << FLOAT) | (1L << INT) | (1L << BOOLEAN) | (1L << VARIABLE) | (1L << STRINGSPECIAL) | (1L << STRINGFIRSTPART) | (1L << STRING) | (1L << COMMENT))) != 0) );
			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public FirstRuleContext firstRule() {
			return getRuleContext(FirstRuleContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(23);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__2:
			case T__4:
			case DATOVY_TYP:
			case LOGICKENOT:
			case FLOAT:
			case INT:
			case BOOLEAN:
			case VARIABLE:
			case STRINGSPECIAL:
			case STRINGFIRSTPART:
			case STRING:
			case COMMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				firstRule();
				}
				break;
			case T__3:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(22);
				condition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FirstRuleContext extends ParserRuleContext {
		public FirstRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstRule; }
	 
		public FirstRuleContext() { }
		public void copyFrom(FirstRuleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WriteVisitorContext extends FirstRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> STREDNIK() { return getTokens(GrammarParser.STREDNIK); }
		public TerminalNode STREDNIK(int i) {
			return getToken(GrammarParser.STREDNIK, i);
		}
		public WriteVisitorContext(FirstRuleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterWriteVisitor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitWriteVisitor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitWriteVisitor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VisitCommentContext extends FirstRuleContext {
		public TerminalNode COMMENT() { return getToken(GrammarParser.COMMENT, 0); }
		public VisitCommentContext(FirstRuleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVisitComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVisitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVisitComment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReadVisitorContext extends FirstRuleContext {
		public List<TerminalNode> VARIABLE() { return getTokens(GrammarParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(GrammarParser.VARIABLE, i);
		}
		public List<TerminalNode> STREDNIK() { return getTokens(GrammarParser.STREDNIK); }
		public TerminalNode STREDNIK(int i) {
			return getToken(GrammarParser.STREDNIK, i);
		}
		public ReadVisitorContext(FirstRuleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterReadVisitor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitReadVisitor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitReadVisitor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VisiterPromenneContext extends FirstRuleContext {
		public PromenneContext promenne() {
			return getRuleContext(PromenneContext.class,0);
		}
		public List<TerminalNode> STREDNIK() { return getTokens(GrammarParser.STREDNIK); }
		public TerminalNode STREDNIK(int i) {
			return getToken(GrammarParser.STREDNIK, i);
		}
		public VisiterPromenneContext(FirstRuleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVisiterPromenne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVisiterPromenne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVisiterPromenne(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AsaContext extends FirstRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> STREDNIK() { return getTokens(GrammarParser.STREDNIK); }
		public TerminalNode STREDNIK(int i) {
			return getToken(GrammarParser.STREDNIK, i);
		}
		public AsaContext(FirstRuleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterAsa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitAsa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitAsa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FirstRuleContext firstRule() throws RecognitionException {
		FirstRuleContext _localctx = new FirstRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_firstRule);
		int _la;
		try {
			int _alt;
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new ReadVisitorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				match(T__0);
				setState(30);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(26);
						match(VARIABLE);
						setState(27);
						match(T__1);
						}
						} 
					}
					setState(32);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(33);
				match(VARIABLE);
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(34);
					match(STREDNIK);
					}
					}
					setState(37); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STREDNIK );
				}
				break;
			case 2:
				_localctx = new WriteVisitorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				match(T__2);
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(40);
					expression(0);
					setState(42);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(41);
						match(T__1);
						}
					}

					}
					}
					setState(46); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << LOGICKENOT) | (1L << FLOAT) | (1L << INT) | (1L << BOOLEAN) | (1L << VARIABLE) | (1L << STRINGSPECIAL) | (1L << STRINGFIRSTPART) | (1L << STRING))) != 0) );
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(48);
					match(STREDNIK);
					}
					}
					setState(51); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STREDNIK );
				}
				break;
			case 3:
				_localctx = new VisiterPromenneContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				promenne();
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(54);
					match(STREDNIK);
					}
					}
					setState(57); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STREDNIK );
				}
				break;
			case 4:
				_localctx = new AsaContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				expression(0);
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(60);
					match(STREDNIK);
					}
					}
					setState(63); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STREDNIK );
				}
				break;
			case 5:
				_localctx = new VisitCommentContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				match(COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockVisitorContext extends ConditionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<FirstRuleContext> firstRule() {
			return getRuleContexts(FirstRuleContext.class);
		}
		public FirstRuleContext firstRule(int i) {
			return getRuleContext(FirstRuleContext.class,i);
		}
		public BlockVisitorContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterBlockVisitor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitBlockVisitor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitBlockVisitor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfVisitorContext extends ConditionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<FirstRuleContext> firstRule() {
			return getRuleContexts(FirstRuleContext.class);
		}
		public FirstRuleContext firstRule(int i) {
			return getRuleContext(FirstRuleContext.class,i);
		}
		public IfVisitorContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterIfVisitor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitIfVisitor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitIfVisitor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condition);
		int _la;
		try {
			int _alt;
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				_localctx = new BlockVisitorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(T__3);
				setState(69);
				match(T__4);
				setState(70);
				expression(0);
				setState(71);
				match(T__5);
				setState(72);
				match(T__6);
				setState(73);
				firstRule();
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__4) | (1L << DATOVY_TYP) | (1L << LOGICKENOT) | (1L << FLOAT) | (1L << INT) | (1L << BOOLEAN) | (1L << VARIABLE) | (1L << STRINGSPECIAL) | (1L << STRINGFIRSTPART) | (1L << STRING) | (1L << COMMENT))) != 0)) {
					{
					{
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(74);
						match(T__1);
						}
					}

					setState(77);
					firstRule();
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				match(T__7);
				}
				break;
			case 2:
				_localctx = new IfVisitorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(T__3);
				setState(86);
				match(T__4);
				setState(87);
				expression(0);
				setState(88);
				match(T__5);
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(89);
						firstRule();
						}
						} 
					}
					setState(94);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(95);
					match(T__8);
					setState(99);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(96);
							firstRule();
							}
							} 
						}
						setState(101);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					}
					}
				}

				}
				break;
			case 3:
				_localctx = new BlockVisitorContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__9);
				setState(105);
				match(T__4);
				setState(106);
				expression(0);
				setState(107);
				match(T__5);
				setState(108);
				match(T__6);
				setState(109);
				firstRule();
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__4) | (1L << DATOVY_TYP) | (1L << LOGICKENOT) | (1L << FLOAT) | (1L << INT) | (1L << BOOLEAN) | (1L << VARIABLE) | (1L << STRINGSPECIAL) | (1L << STRINGFIRSTPART) | (1L << STRING) | (1L << COMMENT))) != 0)) {
					{
					{
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(110);
						match(T__1);
						}
					}

					setState(113);
					firstRule();
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PromenneContext extends ParserRuleContext {
		public PromenneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promenne; }
	 
		public PromenneContext() { }
		public void copyFrom(PromenneContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InicializacePromenneContext extends PromenneContext {
		public Token op;
		public List<TerminalNode> VARIABLE() { return getTokens(GrammarParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(GrammarParser.VARIABLE, i);
		}
		public List<TerminalNode> PRIRAZENI() { return getTokens(GrammarParser.PRIRAZENI); }
		public TerminalNode PRIRAZENI(int i) {
			return getToken(GrammarParser.PRIRAZENI, i);
		}
		public List<DatovyTypContext> datovyTyp() {
			return getRuleContexts(DatovyTypContext.class);
		}
		public DatovyTypContext datovyTyp(int i) {
			return getRuleContext(DatovyTypContext.class,i);
		}
		public List<TerminalNode> MINUS() { return getTokens(GrammarParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(GrammarParser.MINUS, i);
		}
		public InicializacePromenneContext(PromenneContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterInicializacePromenne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitInicializacePromenne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInicializacePromenne(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeklaracePromenneContext extends PromenneContext {
		public TerminalNode DATOVY_TYP() { return getToken(GrammarParser.DATOVY_TYP, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(GrammarParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(GrammarParser.VARIABLE, i);
		}
		public TerminalNode PRIRAZENI() { return getToken(GrammarParser.PRIRAZENI, 0); }
		public List<DatovyTypContext> datovyTyp() {
			return getRuleContexts(DatovyTypContext.class);
		}
		public DatovyTypContext datovyTyp(int i) {
			return getRuleContext(DatovyTypContext.class,i);
		}
		public List<TerminalNode> MINUS() { return getTokens(GrammarParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(GrammarParser.MINUS, i);
		}
		public DeklaracePromenneContext(PromenneContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDeklaracePromenne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDeklaracePromenne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeklaracePromenne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PromenneContext promenne() throws RecognitionException {
		PromenneContext _localctx = new PromenneContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_promenne);
		int _la;
		try {
			int _alt;
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATOVY_TYP:
				_localctx = new DeklaracePromenneContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(DATOVY_TYP);
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(124);
						match(VARIABLE);
						setState(125);
						match(T__1);
						}
						} 
					}
					setState(130);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				}
				setState(131);
				match(VARIABLE);
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIRAZENI) {
					{
					setState(132);
					match(PRIRAZENI);
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << FLOAT) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) {
						{
						{
						setState(133);
						datovyTyp();
						setState(135);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
						case 1:
							{
							setState(134);
							_la = _input.LA(1);
							if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << MINUS))) != 0)) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
							break;
						}
						}
						}
						setState(141);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
